--- a/.github/workflows/main_meuponto_web_cosmos.yml
+++ b/.github/workflows/main_meuponto_web_cosmos.yml
@@ -21,11 +21,8 @@ jobs:
           dotnet-version: '7.0.x'
           include-prerelease: false
 
-      - name: Install dependencies
-        run: dotnet restore
-
       - name: Build with dotnet
-        run: dotnet build src/MeuPonto.Web/MeuPonto.Web.csproj --configuration Release_Web_Cosmos --no-restore
+        run: dotnet build src/MeuPonto.Web/MeuPonto.Web.csproj --configuration Release_Web_Cosmos
 
       - name: Specs
         run: dotnet test specs/MeuPonto.Specs/MeuPonto.Specs.csproj --configuration Release --verbosity normal
@@ -34,7 +31,7 @@ jobs:
         run: dotnet test tests/MeuPonto.Web.Tests/MeuPonto.Web.Tests.csproj --configuration Release --verbosity normal
 
       - name: dotnet publish
-        run: dotnet publish src/MeuPonto.Web/MeuPonto.Web.csproj -c Release_Web_Cosmos -o ${{env.DOTNET_ROOT}}/myapp --no-restore
+        run: dotnet publish src/MeuPonto.Web/MeuPonto.Web.csproj -c Release_Web_Cosmos -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
