--- a/.github/workflows/main_meuponto_web_cosmos.yml
+++ b/.github/workflows/main_meuponto_web_cosmos.yml
@@ -13,24 +13,24 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
       - name: Setup .NET Core
-        uses: actions/setup-dotnet@v3
+        uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '7.0.x'
-          dotnet-quality: 'validated'
+          include-prerelease: false
 
-      - name: Test specs (web)
+      - name: Test Specs (Web)
         run: dotnet test specs/MeuPonto.Specs/MeuPonto.Specs.csproj --configuration Release --verbosity normal
 
-      - name: Test web
+      - name: Test Web
         run: dotnet test tests/MeuPonto.Web.Tests/MeuPonto.Web.Tests.csproj --configuration Release --verbosity normal
 
-      - name: Build web
+      - name: Build Web
         run: dotnet build src/MeuPonto.Web/MeuPonto.Web.csproj --configuration Release_Web_Cosmos
 
-      - name: Publish web
+      - name: Publish Web
         run: dotnet publish src/MeuPonto.Web/MeuPonto.Web.csproj --configuration Release_Web_Cosmos -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
