--- a/.github/workflows/main_meuponto_web_cosmos.yml
+++ b/.github/workflows/main_meuponto_web_cosmos.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Test Specs (Web)
         run: dotnet test specs/MeuPonto.Specs/MeuPonto.Specs.csproj --configuration Release --verbosity normal --filter:"Category!=wip"
 
+      - name: Test Use Cases (Web)
+        run: dotnet test specs/MeuPonto.UseCases/MeuPonto.UseCases.csproj --configuration Release --verbosity normal --filter:"Category!=wip"
+
       - name: Test Web
         run: dotnet test tests/MeuPonto.Web.Tests/MeuPonto.Web.Tests.csproj --configuration Release --verbosity normal
 
